Fixes input placeholder having the wrong color in IE11.
Fixes OneGov/onegov.town#242

--- a/src/onegov.org/onegov/org/theme/styles/org.scss
+++ b/src/onegov.org/onegov/org/theme/styles/org.scss
@@ -56,6 +56,14 @@
 $max-line-width: 67ex;
 
 /*
+    Zurb foundation uses this without !import, which causes IE11 to not
+    apply the placeholder color.
+*/
+:-ms-input-placeholder {
+   color: $input-placeholder-font-color !important;
+}
+
+/*
     Hyphenation for browsers which support it.
 */
 
